# haskell-meetup-list-fusion

./: ChangeLog.md  LICENSE  list-fusion.cabal
bench/: Bench.hs
slides/: .gitignore  slides.tex
src/ListFusion/: GHC.hs  LikeGHC.hs  LikeGHCWithRules.hs  Naive.hs
